Fix issue with code overflow and nav menu in rebuilding click post

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -54,10 +54,12 @@
 
 #nav-menu {
   @include icon-position(right);
+  cursor: pointer;
 }
 
 #nav-menu-left {
   @include icon-position(left);
+  cursor: pointer;
 }
 
 #menu {
@@ -104,10 +106,10 @@
 /* Main content */
 
 .fixed {
-  position: fixed;
-  @media (min-width: 940px) {
-    position: static;
-  }
+  position: fixed !important;
+}
+.static {
+  position: static;
 }
 
 #container {
